--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "JobAlign Node.js Backend",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "cors": "^2.8.5",
+    "axios": "^1.6.2",
+    "cors": "^2.8.6",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2"
+    "express": "^4.22.1",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
